; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8187se/extr_r8185b_init.c_InitTxPwrTracking87SE.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8187se/extr_r8185b_init.c_InitTxPwrTracking87SE.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@PWR_METER_EN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InitTxPwrTracking87SE(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call i32 @RF_ReadReg(%struct.net_device* %4, i32 2)
  store i32 %5, i32* %3, align 4
  %6 = load %struct.net_device*, %struct.net_device** %2, align 8
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @PWR_METER_EN, align 4
  %9 = or i32 %7, %8
  %10 = call i32 @RF_WriteReg(%struct.net_device* %6, i32 2, i32 %9)
  %11 = call i32 @mdelay(i32 1)
  ret void
}

declare dso_local i32 @RF_ReadReg(%struct.net_device*, i32) #1

declare dso_local i32 @RF_WriteReg(%struct.net_device*, i32, i32) #1

declare dso_local i32 @mdelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
